--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -269,7 +269,7 @@ ul.contact li a.icon-rss:before {
 }
 
 .button {
-    background-color: #bbbba6;
+    background-color: #d0d0c459;
     border: none;
     color: #ffffff;
     cursor: pointer;
@@ -308,14 +308,14 @@ ul.contact li a.icon-rss:before {
 
 .button:after {
     border-bottom-width: 2px;
-    border-color: brown;
+    border-color: #9e4040;
     bottom: -5px;
     right: 0px;
 }
 
 .button:hover,
 .button.hover {
-    background-color: #ffffffbd;
+    background-color: rgba(255, 255, 255, 0.27);
 }
 
 .button:hover:before,
@@ -643,125 +643,418 @@ figure {
 
 /*********** About ***********/
 
-
-.paragraph {
-    padding-right: 10em;
-    font-size: 1.25rem;
-    max-width: 75%;
-    margin: 20px;
+.container {
+    width: 100%;
 }
 
-@media (min-width: 600px) {
-    .grid {
-        display: grid;
-        grid-template-columns: 10% 15% 20% 25% 30%;
-    }
-
-    .text-block {
-        width: 86%;
-        height: auto;
-        display: block;
-        margin-top: 12.5%;
-        margin-bottom: 7.5%;
-    }
-
+.container h1 {
+    font-size: 50px
 }
 
-
-.headline {
-    grid-column: 2/span 3;
-    grid-row: 1/span 1;
-    align-self: center;
-    line-height: 1.2;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    position: relative;
-    z-index: 1;
-}
-
-
-@media screen and (min-width: 600px) {
-    .headline:before {
-        margin-left: -18.5%;
-    }
-}
-
-.image-wrapper {
-    grid-column: 4/span 2;
-    grid-row: 1/span 1;
-    max-height: 60vh;
-}
-
-.image-wrapper > img {
-    display: block;
-    margin-left: auto;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-}
-
-.text-block {
-    grid-column: 2/span 3;
-}
-
-.image-teaser {
-    grid-column: 5/span 1;
-    grid-row-end: span 5;
-}
-
-.image-teaser > img {
-    display: block;
-    margin: auto;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-p {
-    color: #111;
-    margin-top: 0;
-    line-height: 1.4;
-    font-size: 1.25rem;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
+.about {
+    padding: 5% 0;
+    width: 100%;
     height: auto;
-    vertical-align: bottom;
+    background-color: #fff;
 }
 
-h1 {
-    font-size: 2rem;
-    color: #333;
+.about .left {
+    padding: 2% 0;
+    float: left;
+    width: 50%;
+    display: inline-block;
 }
 
-@media screen and (min-width: 600px) {
-    h1 {
-        font-size: 3rem;
+.about .right {
+    width: 50%;
+    display: inline-block;
+}
+
+.about .right img {
+    width: 90%
+}
+
+.about .left h1 {
+    text-align: center;
+    color: #151914db;
+    margin: 0 0 10px 0;
+}
+
+.about .left hr {
+    width: 20%;
+    border-top: 2px solid #000;
+    border-bottom: none;
+}
+
+.about .left p {
+    font-size: 1rem;
+    margin: 40px auto;
+    width: 80%
+}
+
+.mission {
+    padding: 5% 0;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+}
+
+.mission .right {
+    padding: 2% 0;
+    width: 50%;
+
+    display: inline-block;
+}
+
+.mission .left {
+    float: left;
+    width: 50%;
+
+    display: inline-block;
+}
+
+.mission .left img {
+    width: 100%;
+}
+
+.mission .right h1 {
+    text-align: center;
+    color: #151914db;
+    margin: 0 0 20px 0;
+}
+
+.mission .right hr {
+    width: 35%;
+    border-top: 2px solid #000;
+    border-bottom: none;
+}
+
+.mission .right p {
+    font-size: 1rem;
+    margin: 40px auto;
+    width: 80%
+}
+
+
+.team {
+    width: 90%;
+    margin: auto;
+    padding: 5% 5%;
+    over-flow: hidden;
+}
+
+.team h1 {
+    text-align: center;
+    color: #1EADFF;
+
+}
+
+.team h1 hr {
+    width: 15%;
+    border-top: 2px solid #000;
+    background-color: transperant;
+    border-bottom: none;
+    margin-bottom: 50px;
+}
+
+.team .card {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    position: relative;
+    min-width: 20%;
+    height: 500px !important;
+    height: auto;
+    background-color: #fff;
+    display: inline-block;
+    margin: 40px 6.5%;
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+.card .circle-container {
+    position: relative;
+    background-color: #579f79;
+    width: 250px;
+    height: 250px;
+    border: none;
+    border-radius: 50%;
+    margin: auto;
+    color: #fff;
+}
+
+.circle-container h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    font-size: 60px;
+}
+
+.team .card h2 {
+    text-align: center;
+    margin: 30px 0 0 0;
+}
+
+.team .card h4 {
+    text-align: center;
+    margin: 10px 0 0 0;
+}
+
+.team .card p {
+    width: 250px;
+    margin: 30px auto;
+    text-align: center;
+
+}
+
+.clear {
+    clear: both;
+}
+
+/****** Footer *******/
+
+footer {
+    width: 100%;
+    height: 100px;
+    background-color: #28587c;
+}
+
+footer p {
+    text-align: center;
+    padding: 0 2%;
+}
+
+/** code by webdevtrick ( https://webdevtrick.com ) **/
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.main {
+    max-height: 550px;;
+    background-color: #292c2f;
+    color: white;
+    font-size: 38pt;
+    text-align: center;
+    line-height: 550px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+}
+
+.footer-distributed {
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+
+    padding: 55px 50px;
+    margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.footer-distributed .footer-left {
+    width: 40%;
+}
+
+.footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px 'Roboto Light', 'sans-serif';
+    margin: 0;
+}
+
+.footer-distributed h3 span {
+    color: #5383d3;
+}
+
+
+.footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+}
+
+.footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+    color: #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+
+.footer-distributed .footer-center {
+    width: 35%;
+}
+
+.footer-distributed .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+    font-size: 17px;
+    line-height: 38px;
+}
+
+.footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+    color: #5383d3;
+    text-decoration: none;;
+}
+
+.footer-distributed .footer-right {
+    width: 20%;
+}
+
+.footer-distributed .footer-company-about {
+    line-height: 20px;
+    color: #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+}
+
+.footer-distributed .footer-company-about span {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons {
+    margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #33383b;
+    border-radius: 2px;
+
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+
+@media (max-width: 880px) {
+
+    .footer-distributed {
+        font: bold 14px sans-serif;
+
+    }
+
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .footer-distributed .footer-center i {
+        margin-left: 0;
+    }
+
+    .main {
+        line-height: normal;
+        font-size: auto;
+    }
+
+}
+
+
+/* media */
+@media (max-width: 1200px) {
+    .mission .right p {
+        font-size: .8rem;
+        margin: 20px auto;
+    }
+
+    .about .left p {
+        font-size: .8rem;
+        margin: 20px auto;
     }
 }
 
-.demo-styling {
-    margin: 2rem 0;
-}
 
-@media (min-width: 600px) {
-    .demo-styling {
-        background-image: linear-gradient(to right, rgba(10, 10, 10, 0.1) 0%, rgba(10, 10, 10, 0) 0.1%, rgba(10, 10, 10, 0) 10%, rgba(10, 10, 10, 0.1) 10%, rgba(10, 10, 10, 0) 10.1%, rgba(10, 10, 10, 0) 25%, rgba(10, 10, 10, 0.1) 25%, rgba(10, 10, 10, 0) 25.1%, rgba(10, 10, 10, 0) 45%, rgba(10, 10, 10, 0.1) 45%, rgba(10, 10, 10, 0) 45.1%, rgba(10, 10, 10, 0) 70%, rgba(10, 10, 10, 0.1) 70%, rgba(10, 10, 10, 0) 70.1%, rgba(10, 10, 10, 0) 99.9%, rgba(10, 10, 10, 0.1) 100%);
-        background-repeat: repeat-y;
+@media (max-width: 992px) {
+    .about .left {
+        width: 100%;
+    }
+
+    .about .right {
+        width: 100%;
+    }
+
+    .mission .left {
+        width: 100%;
+    }
+
+    .mission .right {
+        width: 100%;
+    }
+
+    .team .card {
+        width: 40%;
     }
 }
 
-.demo-styling > * {
-    color: #222;
-    padding: 0.5rem;
+@media (max-width: 768px) {
+    .team .card {
+        width: 100%;
+    }
+
+    nav {
+        height: 80px;
+    }
 }
 
 /*****************************/
@@ -2289,9 +2582,6 @@ color: #fff
     }
 }
 
-.border-bottom {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
-}
 
 .lead {
     line-height: 1.8;
