Added robots.txt info and extended the blog base.html to the gallery so that the index and about pages have the same feel, and the blog and gallery have a more utilitarian, functional look about them.

--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -1,3 +1,4 @@
+{% extends 'blog/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +11,7 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <style>
         .image-thumbail {
@@ -24,8 +25,13 @@
         }
     </style>
 </head>
-
-<body class="m-5">
+{% block content %}
+    <style>
+    #sidebar {
+        display:none;
+    }
+    </style>
+    <body class="m-5">
 
     <div class="container">
         <div class="row">
@@ -40,11 +46,11 @@
                             <a href="{% url 'gallery' %}">All</a>
                         </li>
                         {% for category in categories %}
-                        <li class=" list-group-item">
-                            <a href="{% url 'gallery' %}?category={{category.name}}">
-                                {{category.name}}
-                            </a>
-                        </li>
+                            <li class=" list-group-item">
+                                <a href="{% url 'gallery' %}?category={{ category.name }}">
+                                    {{ category.name }}
+                                </a>
+                            </li>
                         {% endfor %}
 
 
@@ -58,24 +64,18 @@
                 <div class="row">
 
                     {% for photo in photos %}
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <img class="image-thumbnail" src="{{photo.image.url}}" alt="Card image cap">
+                        <div class="col-md-4">
+                            <div class="card my-2">
+                                <img class="image-thumbnail" src="{{ photo.image.url }}" alt="Card image cap">
 
-                            <div class="card-body">
-                                <small>Category: {{photo.category.name}}</small>
+                                <div class="card-body">
+                                    <small>Category: {{ photo.category.name }}</small>
+                                </div>
+                                <a href="{% url 'photo' photo.id %}" class="btn btn-outline-dark btn-sm m-1">View</a>
                             </div>
-                            <a href="{% url 'photo' photo.id %}" class="btn btn-outline-dark btn-sm m-1">View</a>
                         </div>
-                    </div>
 
                     {% endfor %}
-
-
-
-
-
-
 
 
                 </div>
@@ -83,6 +83,24 @@
         </div>
     </div>
 
-</body>
+    </body>
 
-</html>
+    </html>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- jQuery Easing -->
+    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+    <!-- Bootstrap -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Waypoints -->
+    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+    <script src="{% static 'js/sticky.js' %}"></script>
+
+    <!-- Stellar -->
+    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+    <!-- Superfish -->
+    <script src="{% static 'js/hoverIntent.js' %}"></script>
+    <script src="{% static 'js/superfish.js' %}"></script>
+
+    <!-- Main JS -->
+    <script src="{% static 'js/main.js' %}"></script>
+{% endblock content %}
