Got everything back to how it was before having the animations mess up and the new navbar screw other things up. Just had to do a hard reset and create a new branch at an earlier commit, but everything is back to where it was now.
Now to try and figure out a new navbar that works with the site.

--- a/photos/templates/photos/add.html
+++ b/photos/templates/photos/add.html
@@ -53,7 +53,7 @@
                             <input required name="images" type="file" multiple class="form-control-file">
                         </div>
 
-                        <button type='submit' class="btn btn-primary m-3">Submit</button>
+                        <button type='submit' class="btn btn-success m-3">Submit</button>
 
                     </form>
                 </div>
