--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -1,3 +1,4 @@
+{% extends 'blog/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +12,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+{% block content %}
     <style>
         .image-thumbail {
             height: 200px;
@@ -21,6 +22,9 @@
         .list-group-item a {
             text-decoration: none;
             color: black;
+        }
+        #sidebar {
+            display: none;
         }
     </style>
 </head>
@@ -84,5 +88,5 @@
     </div>
 
 </body>
-
+{% endblock content %}
 </html>
