--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -816,8 +816,8 @@ figure {
 
 footer {
     width: 100%;
-    height: 100px;
-    background-color: #28587c;
+    height: 300px;
+    background-color: #32381A;
 }
 
 footer p {
@@ -841,12 +841,12 @@ body {
 }
 
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
 }
 
 .footer-distributed {
-    background-color: #292c2f;
+    background-color: #32381A;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -875,7 +875,7 @@ footer {
 }
 
 .footer-distributed h3 span {
-    color: #5383d3;
+    color: khaki;
 }
 
 
