--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -123,7 +123,7 @@
                         They have 2.5 times more protein than chicken and a third of the cost of chicken. </p>
                     <br>
                     <p>Finally they are so easy to farm that even those with disabilities or children can be involved.
-</p>
+                    </p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -269,28 +269,67 @@
         </div>
 
     </div>
+    <footer class="footer-distributed">
 
-    <div id="welcome">
-        <div class="container">
-            <div class="title">
-                <h2>Our Vision</h2>
-                <span class="byline">To create climate smart solutions to nutrient and assisting the community to produce better in with the locally available resources </span>
-            </div>
-            <p>
+        <div class="footer-left">
+
+            <h3>Glorified Community Empowerment<span>Trust</span></h3>
+
+            <p class="footer-links">
+                <a href="{% url 'index' %}">Home</a>
+                ·
+                <a href="{% url 'about' %}">Blog</a>
+                ·
+                <a href="{% url 'blog:post_list' %}">Pricing</a>
+                ·
+                <a href="{% url 'gallery' %}">About</a>
 
             </p>
-            <ul class="actions">
-                <li><a href="#" class="button">contact us</a></li>
-            </ul>
+
+            <p class="footer-company-name">Miracle &copy; 2021</p>
         </div>
-    </div>
-    <div class="modal-footer">
-        <footer>
-        </footer>
-    </div>
-    <div id="copyright" class="container">
-        <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
-    </div>
+
+        <div class="footer-center">
+
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>126 Sturgess Cranborne</span>Harare, Zimbabwe</p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+263 772 485 521</p>
+                <p>+263 774 741 688</p>
+            </div>
+
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:gcet.victors@gmail.com">gcet.victors@gmail.com</a></p>
+            </div>
+
+        </div>
+
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>Our Partners</span>
+                The Resolution Project as the primary source of funding. As well as contribution from Sight and Life
+                -
+                Partners in nutrition. As well as the help of personal friends.
+            </p>
+
+            <div class="footer-icons">
+
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+
+            </div>
+
+        </div>
+
+    </footer>
+
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- jQuery Easing -->
     <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
