--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -51,176 +51,7 @@
         text-align: center;
         line-height: 550px;
     }
-
-    footer {
-        position: fixed;
-        bottom: 0;
-    }
-
-    .footer-distributed {
-        background-color: #292c2f;
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-        box-sizing: border-box;
-        width: 100%;
-        text-align: left;
-        font: bold 16px sans-serif;
-
-        padding: 55px 50px;
-        margin-top: 80px;
-    }
-
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right {
-        display: inline-block;
-        vertical-align: top;
-    }
-
-    .footer-distributed .footer-left {
-        width: 40%;
-    }
-
-    .footer-distributed h3 {
-        color: #ffffff;
-        font: normal 24px 'Roboto Light', Roboto;
-        margin: 0;
-    }
-
-    .footer-distributed h3 span {
-        color: #5383d3;
-    }
-
-
-    .footer-distributed .footer-links {
-        color: #ffffff;
-        margin: 20px 0 12px;
-        padding: 0;
-    }
-
-    .footer-distributed .footer-links a {
-        display: inline-block;
-        line-height: 1.8;
-        text-decoration: none;
-        color: inherit;
-    }
-
-    .footer-distributed .footer-company-name {
-        color: #8f9296;
-        font-size: 14px;
-        font-weight: normal;
-        margin: 0;
-    }
-
-
-    .footer-distributed .footer-center {
-        width: 35%;
-    }
-
-    .footer-distributed .footer-center i {
-        background-color: #33383b;
-        color: #ffffff;
-        font-size: 25px;
-        width: 38px;
-        height: 38px;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 42px;
-        margin: 10px 15px;
-        vertical-align: middle;
-    }
-
-    .footer-distributed .footer-center i.fa-envelope {
-        font-size: 17px;
-        line-height: 38px;
-    }
-
-    .footer-distributed .footer-center p {
-        display: inline-block;
-        color: #ffffff;
-        vertical-align: middle;
-        margin: 0;
-    }
-
-    .footer-distributed .footer-center p span {
-        display: block;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 2;
-    }
-
-    .footer-distributed .footer-center p a {
-        color: #5383d3;
-        text-decoration: none;!important;
-    }
-
-    .footer-distributed .footer-right {
-        width: 20%;
-    }
-
-    .footer-distributed .footer-company-about {
-        line-height: 20px;
-        color: #92999f;
-        font-size: 13px;
-        font-weight: normal;
-        margin: 0;
-    }
-
-    .footer-distributed .footer-company-about span {
-        display: block;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: bold;
-        margin-bottom: 20px;
-    }
-
-    .footer-distributed .footer-icons {
-        margin-top: 25px;
-    }
-
-    .footer-distributed .footer-icons a {
-        display: inline-block;
-        width: 35px;
-        height: 35px;
-        cursor: pointer;
-        background-color: #33383b;
-        border-radius: 2px;
-
-        font-size: 20px;
-        color: #ffffff;
-        text-align: center;
-        line-height: 35px;
-
-        margin-right: 3px;
-        margin-bottom: 5px;
-    }
-
-
-    @media (max-width: 880px) {
-
-        .footer-distributed {
-            font: bold 14px sans-serif;
-
-        }
-
-        .footer-distributed .footer-left,
-        .footer-distributed .footer-center,
-        .footer-distributed .footer-right {
-            display: block;
-            width: 100%;
-            margin-bottom: 40px;
-            text-align: center;
-        }
-
-        .footer-distributed .footer-center i {
-            margin-left: 0;
-        }
-
-        .main {
-            line-height: normal;
-            font-size: auto;
-        }
-
-    }</style>
+</style>
 
 <div id="header-wrapper">
     <div id="topheader" class="container">
@@ -257,85 +88,89 @@
 {% block content %}{% endblock content %}
 
 
-<div id="welcome">
-    <div class="container">
-        <div class="title">
-            <h2>Fusce ultrices fringilla metus</h2>
-            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
-        </div>
+<footer class="footer-distributed">
 
-
-        <ul class="actions">
-            <li><a href="#" class="button">Etiam posuere</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="footer-distributed">
     <div class="footer-left">
-        <h3>Glorified Community Empowerment Trust</h3>
+
+        <h3>Glorified Community Empowerment<span>Trust</span></h3>
+
         <p class="footer-links">
-            <a href="#">Home</a>
-            <a href="{% url 'about' %}">About Us</a>
-            <a href="{% url 'blog:post_list' %}">Blog</a>
-            <a href="{% url 'gallery' %}">Gallery</a>
+            <a href="{% url 'index' %}">Home</a>
+            ·
+            <a href="{% url 'about' %}">Blog</a>
+            ·
+            <a href="{% url 'blog:post_list' %}">Pricing</a>
+            ·
+            <a href="{% url 'gallery' %}">About</a>
+
         </p>
-        <p class="footer-company-name">Jumping Protein &copy; 2021</p>
+
+        <p class="footer-company-name">Miracle &copy; 2021</p>
     </div>
+
     <div class="footer-center">
+
         <div>
             <i class="fa fa-map-marker"></i>
-            <p><span>126 Sturgess Cranborne</span> Harare, Zimbabwe</p>
+            <p><span>126 Sturgess Cranborne</span>Harare, Zimbabwe</p>
         </div>
+
         <div>
             <i class="fa fa-phone"></i>
             <p>+263 772 485 521</p>
             <p>+263 774 741 688</p>
         </div>
+
         <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="mailto:esnathmd@gmail.com">gcet.victors@gmail.com</a></p>
+            <p><a href="mailto:gcet.victors@gmail.com">gcet.victors@gmail.com</a></p>
         </div>
-        <div class="footer-right">
 
-            <p class="footer-company-about">
-                <span>Our Vision</span>
-                An economically limitless Africa.
-            </p>
-            <div class="footer-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-            </div>
-        </div>
     </div>
 
-    <div id="copyright" class="container">
-        <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
+    <div class="footer-right">
+
+        <p class="footer-company-about">
+            <span>Our Partners</span>
+            The Resolution Project as the primary source of funding. As well as contribution from Sight and Life
+            -
+            Partners in nutrition. As well as the help of personal friends.
+        </p>
+
+        <div class="footer-icons">
+
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+
+        </div>
+
     </div>
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <!-- jQuery Easing -->
-    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-    <!-- Bootstrap -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Waypoints -->
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/sticky.js' %}"></script>
+</footer>
 
-    <!-- Stellar -->
-    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-    <!-- Superfish -->
-    <script src="{% static 'js/hoverIntent.js' %}"></script>
-    <script src="{% static 'js/superfish.js' %}"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<!-- jQuery Easing -->
+<script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+<!-- Bootstrap -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- Waypoints -->
+<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+<script src="{% static 'js/sticky.js' %}"></script>
 
-    <!-- Main JS -->
-    <script src="{% static 'js/main.js' %}"></script>
+<!-- Stellar -->
+<script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+<!-- Superfish -->
+<script src="{% static 'js/hoverIntent.js' %}"></script>
+<script src="{% static 'js/superfish.js' %}"></script>
+
+<!-- Main JS -->
+<script src="{% static 'js/main.js' %}"></script>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
