--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -577,7 +577,7 @@ p, ul, ol {
     font-size: 16px;
     color: #848484;
     font-family: "Open Sans", Arial, sans-serif;
-    list-style: inside;
+    list-style: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
