--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
     <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
@@ -28,6 +28,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
+    <script src="https://kit.fontawesome.com/2c7fc28a2f.js"></script>
+
 
     <script type="text/javascript">
         var bodyCacheable = true;
@@ -163,21 +165,94 @@
                     suit the intended community.</p>
 
             </div>
-            <div class="clear"></div>
 
+            <div id="container">
+                <div id="toggleContainer">
+                    <label>Carousel</label>
+                    <div id="toggle">
+                        <div id="outer3">
+                            <div id="slider3"></div>
+                        </div>
+                        <label>Tiles</label>
+                    </div>
+                </div>
+                <div id="galleryView">
+                    <div id="galleryContainer">
+                        <div id="leftView"></div>
+                        <button id="navLeft" class="navBtns"><i class="fas fa-arrow-left fa-3x"></i></button>
+                        <a id="linkTag">
+                            <div id="mainView"></div>
+                        </a>
+                        <div id="rightView"></div>
+                        <button id="navRight" class="navBtns"><i class="fas fa-arrow-right fa-3x"></i></button>
+                    </div>
+                </div>
+                <div id="tilesView">
+                    <div id="tilesContainer"></div>
+                </div>
+            </div>
         </div>
 
+        <div class="container">
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-                crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous"></script>
+            <div class="about">
+                <div class="left">
+                    <h1>Statement of Need</h1>
+                    <hr>
+                    <p>Our marginal societies suffer from innate poverty. Orphans and vulnerable children, persons with
+                        a disability, widows, the elderly and also young rural women are the hardest hit. These
+                        individuals and groups live on less than a dollar a day. </p>
+                    <p>There are massive food shortages in the communities. They are deprived from a decent meal hence
+                        prone to malnutrition diseases. Most of them live on two light meals per day to keep them alive.
+                        A balanced diet in this context is usually a nightmare. For those in elderly homes and
+                        orphanages food supply is a great challenge. Most communities have little to none good floors of
+                        income to sustain them hence the need to establish some projects.</p>
+                    <p>Education is a cornerstone to human kind however poverty has denied our beloved communities. Most
+                        marginalised communities are not able to attend school due to lack of incomes to meet the school
+                        fees demand. A high rate of dropouts is experienced. A majority of these will contribute to a
+                        low literacy rate and create vulnerable communities. </p>
+                    <p>The majority of the population in context has no decent shelter. It is usually a situation of
+                        overpopulation or exposure to harsh weather and failure to afford basic utilities. These need a
+                        good income and some projects would be best suited a lasting solution.</p>
+
+                    <p>Medical bills have posed a life threatening situation. In the face of the pandemics the poor
+                        cannot survive the costs even the medical subsidy cannot reach far to them. HIV/AIDS, malaria
+                        corona virus and cancer to name a few have robed our loved ones due to poverty. </p>
+
+                    <p>Through income generating projects at both individual and institutional levels more income can be
+                        generated to sustain a life. Communities have either tried and gave up or contemplated starting
+                        income generating projects to address their basic needs. GCET is there to bridge the knowledge
+                        gap and empower communities through entrepreneurship. Projects will be from all sectors of the
+                        economy with a major thrust in agriculture.</p>
+
+                </div>
+                <div class="right">
+                    <img src="{% static 'webapp/images/older-gentleman-buckets.webp'%}"  alt="">
+                </div>
+                <div class="clear"></div>
+            </div>
+
+
+            <div class="mission">
+
+                <div class="left">
+                    <img src="{% static 'webapp/images/group-sitting.webp' %}">
+                </div>
+                <div class="right">
+                    <h1>How We Add Value</h1>
+                    <hr>
+                    <p>Our social philanthropy is to address human need in education, food, shelter and medication
+                        through partnership and cooperative efforts to end poverty. We help communities identify their
+                        community sustainable business solution and help them achieve it. We are a gateway to success
+                        through imparting business skills, mentoring and marketing. We are an entrepreneurship based
+                        organisation hence we deliver skill through a team of our diverse business experts. </p>
+
+                </div>
+                <div class="clear"></div>
     </body>
+
+
+
 
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- jQuery Easing -->
